--- a/VSExam/src/main/res/layout/classmate_details.xml
+++ b/VSExam/src/main/res/layout/classmate_details.xml
@@ -105,7 +105,7 @@
                          android:layout_width="0dp"
                          android:layout_weight="1"
                          android:id="@+id/button_mail"
-                         android:background="@null"
+                         android:background="?selectableItemBackground"
                          android:src="@drawable/mail_icon"/>
 
             <View android:layout_height="match_parent"
@@ -114,11 +114,11 @@
                   android:layout_marginBottom="5dp"
                   android:background="@color/divider_light"/>
 
-            <ImageButton android:layout_height="wrap_content"
+            <ImageButton android:layout_height="match_parent"
                          android:layout_width="0dp"
                          android:layout_weight="1"
                          android:id="@+id/button_goto"
-                         android:background="@null"
+                         android:background="?selectableItemBackground"
                          android:src="@android:drawable/ic_menu_send"/>
 
         </LinearLayout>
