--- a/VSExam/src/main/res/layout/exam_list_details.xml
+++ b/VSExam/src/main/res/layout/exam_list_details.xml
@@ -12,6 +12,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:fillViewport="true"
+                android:layout_marginBottom="10dp"
                 android:scrollbarStyle="outsideOverlay" >
 
         <LinearLayout android:layout_height="wrap_content"
@@ -55,8 +56,7 @@
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           style="@style/ResponsiveLayout"
-                          android:paddingBottom="10dp"
-                          tools:minHeight="200dp">
+                          android:paddingBottom="10dp" >
 
                 <LinearLayout style="@style/ResponsiveLayoutItem.Details"
                               android:layout_marginLeft="@dimen/details_side_margin">
@@ -162,7 +162,7 @@
                     <ProgressBar android:id="@+id/classmates_progress"
                                  style="?android:progressBarStyleLarge"
                                  android:layout_width="wrap_content"
-                                 android:layout_height="match_parent"
+                                 android:layout_height="300dp"
                                  android:layout_gravity="center"
                                  android:visibility="visible"
                                  tools:visibility="gone"/>
