--- a/VSExam/src/main/res/values-w600dp/styles.xml
+++ b/VSExam/src/main/res/values-w600dp/styles.xml
@@ -12,7 +12,7 @@
     </style>
 
     <style name="ResponsiveLayoutItem.Details" parent="ResponsiveLayoutItem">
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@color/white</item>
         <item name="android:layout_margin">7dp</item>
         <item name="android:layout_marginTop">15dp</item>
