--- a/VSExam/src/main/res/values-w600dp/dimens.xml
+++ b/VSExam/src/main/res/values-w600dp/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="sliding_pane_width">400dp</dimen>
     <dimen name="details_inner_padding">7dp</dimen>
     <dimen name="details_side_margin">70dp</dimen>
+    <dimen name="classmates_progress_height">-2dp</dimen> <!-- wrap_conten -->
 </resources>
