--- a/VSExam/src/main/res/layout/classmate_details.xml
+++ b/VSExam/src/main/res/layout/classmate_details.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_margin="5dp"
-        android:layout_width="wrap_content">
+        android:layout_width="match_parent">
 
         <LinearLayout android:layout_width="match_parent"
                       android:layout_height="wrap_content"
