--- a/VSExam/src/main/res/layout/exam_list_details.xml
+++ b/VSExam/src/main/res/layout/exam_list_details.xml
@@ -193,12 +193,14 @@
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 android:layout_weight="1"
+                android:id="@+id/button_left"
                 android:text="Register ASAP" />
 
         <Button style="?buttonBarButtonStyle"
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 android:layout_weight="1"
+                android:id="@+id/button_right"
                 android:text="Deregister" />
 
     </LinearLayout>
