--- a/VSExam/src/main/res/layout/exam_list_item.xml
+++ b/VSExam/src/main/res/layout/exam_list_item.xml
@@ -29,6 +29,7 @@
 
     <LinearLayout style="@style/ResponsiveLayout"
                   android:layout_width="wrap_content"
+                  android:id="@+id/layout_datetime"
                   android:layout_height="match_parent"
                   android:paddingRight="5dp"
                   android:gravity="center" >
