--- a/VSExam/src/main/res/layout/list_header.xml
+++ b/VSExam/src/main/res/layout/list_header.xml
@@ -5,6 +5,8 @@
           style="?android:listSeparatorTextViewStyle"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
+          android:textSize="17sp"
+          android:layout_marginTop="10dp"
           android:text="Dummy"
           tools:text="Neco">
 
