--- a/VSExam/src/main/res/menu/main.xml
+++ b/VSExam/src/main/res/menu/main.xml
@@ -1,6 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+    <item
+        android:id="@+id/action_refresh"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:icon="@drawable/ic_menu_refresh"
+        android:title="@string/menu_refresh"/>
+
+    <item android:id="@+id/action_json"
+        android:title="@string/menu_json_format"
         android:orderInCategory="100"
         android:showAsAction="never" />
 </menu>
