--- a/VSExam/src/main/res/layout/fragment_login.xml
+++ b/VSExam/src/main/res/layout/fragment_login.xml
@@ -6,36 +6,46 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" >
 
-    <!-- Login form -->
-
     <ScrollView
         android:id="@+id/login_form"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_centerVertical="true" >
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:scrollbars="none" >
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="16dp"
             android:orientation="vertical" >
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:contentDescription="@string/logo"
+                android:layout_marginBottom="20dp"
+                android:src="@drawable/logo_huge"/>
+
             <EditText
                 android:id="@+id/text_login"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="xname"
+                android:ems="20"
+                android:hint="@string/input_xname"
                 android:inputType="text"
                 android:maxLines="1"
                 android:singleLine="true" />
 
             <EditText
                 android:id="@+id/text_password"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ems="20"
                 android:maxWidth="300dp"
-                android:hint="password"
+                android:hint="@string/input_password"
                 android:inputType="textPassword"
                 android:maxLines="1"
                 android:singleLine="true" />
@@ -48,8 +58,9 @@
                 android:layout_marginTop="16dp"
                 android:paddingLeft="32dp"
                 android:paddingRight="32dp"
-                android:text="Login" />
+                android:text="@string/login" />
         </LinearLayout>
+
     </ScrollView>
 
 </RelativeLayout>
