--- a/VSExam/src/main/res/layout/fragment_login.xml
+++ b/VSExam/src/main/res/layout/fragment_login.xml
@@ -1,66 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                tools:context=".LoginActivity"
-                android:id="@+id/container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/login_form"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.frca.vsexam.fragments.LoginFragment">
 
-    <ScrollView
-        android:id="@+id/login_form"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:scrollbars="none" >
+        android:layout_gravity="center"
+        android:padding="16dp"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:orientation="vertical" >
+            android:layout_gravity="center"
+            android:contentDescription="@string/logo"
+            android:layout_marginBottom="20dp"
+            android:src="@drawable/logo_huge"/>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:contentDescription="@string/logo"
-                android:layout_marginBottom="20dp"
-                android:src="@drawable/logo_huge"/>
+        <EditText
+            android:id="@+id/text_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="20"
+            android:hint="@string/input_xname"
+            android:inputType="text"
+            android:maxLines="1"
+            android:singleLine="true"/>
 
-            <EditText
-                android:id="@+id/text_login"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="20"
-                android:hint="@string/input_xname"
-                android:inputType="text"
-                android:maxLines="1"
-                android:singleLine="true" />
+        <EditText
+            android:id="@+id/text_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="20"
+            android:maxWidth="300dp"
+            android:fontFamily="sans-serif"
+            android:hint="@string/input_password"
+            android:password="true"
+            android:inputType="textPassword"
+            android:maxLines="1"
+            android:singleLine="true"/>
 
-            <EditText
-                android:id="@+id/text_password"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="20"
-                android:maxWidth="300dp"
-                android:hint="@string/input_password"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:singleLine="true" />
+        <Button
+            android:id="@+id/sign_in_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="16dp"
+            android:paddingLeft="32dp"
+            android:paddingRight="32dp"
+            android:text="@string/login"/>
+    </LinearLayout>
 
-            <Button
-                android:id="@+id/sign_in_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginTop="16dp"
-                android:paddingLeft="32dp"
-                android:paddingRight="32dp"
-                android:text="@string/login" />
-        </LinearLayout>
+</ScrollView>
 
-    </ScrollView>
 
-</RelativeLayout>
