--- a/VSExam/src/main/res/menu/main.xml
+++ b/VSExam/src/main/res/menu/main.xml
@@ -1,19 +1,20 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/action_refresh"
-        android:orderInCategory="100"
-        android:showAsAction="always"
-        android:icon="@drawable/ic_menu_refresh"
-        android:title="@string/menu_refresh_exams"/>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/action_json"
-        android:title="@string/menu_json_format"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
+    <item android:id="@+id/action_refresh"
+          android:title="@string/menu_refresh_exams"
+          android:icon="@drawable/ic_menu_refresh"
+          android:orderInCategory="100"
+          app:showAsAction="ifRoom" />
 
     <item android:id="@+id/action_settings"
           android:title="@string/action_settings"
           android:icon="@android:drawable/ic_menu_manage"
           android:orderInCategory="101"
-          android:showAsAction="ifRoom"/>
+          app:showAsAction="ifRoom"/>
+
+    <item android:id="@+id/action_json"
+          android:title="@string/menu_json_format"
+          android:orderInCategory="102"
+          app:showAsAction="never" />
 </menu>
